# lab_05.1

./: CMakeLists.txt  main
include/: main.h
src/: h.cpp  main.cpp
tests/: test_h.cpp
